--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-</body>
-
+  <header class="cabeçalho">
+    <h1>anime flix</h1>
+ <img class="cabeçalho-imagem" src="logo.jpg" alt="imagem da logo">
 
   </header>
+
+
+
 
 
 
