--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
  <img class="cabeçalho-imagem" src="logo.jpg" alt="imagem da logo">
 
   </header>
+  <section class="Quem somos">
+
+
+    
+  </section>
+
+
+
+
+
+
 
 
 
