--- a/index.html
+++ b/index.html
@@ -15,17 +15,8 @@
   <section class="Quem somos">
       <p class="Quem-somos-texto">UM SITE ONDE VOCÊ PODE ESTREAR NOVOS FILMES E SÉRIES E SEM GASTAR NADA 
 TOTALMENTE GRATUITO ANIME FLIX É O MELHOR APLICATIVO DE FILMES DE AÇÃO, COMÉDIA, ROMANCE, TERROR, ENTRE OUTROS ACESSE AGORA NOSSO SITE PARA NÃO PERDER NADA.</p>
- <img src="" alt="">
-    
-
-
-
-
-
-
-
-
-    
+ <img class="quem-somos-imagem" src="cinemaimg.jpg" alt="imagem de cinema">
+  
   </section>
 
 
